# grok-sso2cpa

./: .env.example  .gitignore  README.md  backend_runner.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: publish-windows.yml
app/: __init__.py  converter.py  main.py  oauth.py
electron/: main.js  preload.js
scripts/: build-backend.ps1  release.js
static/: app.js  index.html  styles.css
tests/: test_cancellation.py  test_concurrency.py  test_converter.py
