[project]
name = "sso-bridge"
version = "0.1.0"
description = "Local web application for converting x.ai SSO credentials to Grok and cliproxyapi auth files."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "curl_cffi>=0.7,<1",
]

[tool.pyright]
include = ["app", "tests"]
exclude = ["data"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
